kubernetes/apps/default/jellyfin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
subsets:
- addresses:
  - ip: 10.1.2.175
  ports:
  - port: 8096
