kubernetes/apps/default/jellyfin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: internal
  rules:
  - host: &host "jellyfin.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beer
            port:
              number: 80
  tls:
  - hosts:
    - *host
